<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>milktea.cim.bot</groupId>
  <artifactId>cim-bot</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>YAMADA TAKAYUKI Bot Framework</name>
  <properties>
    <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
    <junit.jupiter.version>5.4.0</junit.jupiter.version>
    <junit.platform.version>1.4.0</junit.platform.version>
    <mainClass>milktea.cim.bot.main.Main</mainClass>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>12</release>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>org.slf4j/org.slf4j=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>org.slf4j/org.slf4j.spi=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>org.slf4j/org.slf4j.event=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>org.slf4j/org.slf4j.helpers=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>milktea.cim.base/milktea.cim.framework.command=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>milktea.cim.base/milktea.cim.framework.connector=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>milktea.cim.base/milktea.cim.framework.event=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>milktea.cim.base/milktea.cim.framework.event.extension=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>milktea.cim.base/milktea.cim.framework.interactive=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>milktea.cim.base/milktea.cim.framework.permission=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>${mainClass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
          </execution>
        </executions>
        <configuration>
          <minimizeJar>true</minimizeJar>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.6.0</version>
        <configuration>
          <mainClass>${mainClass}</mainClass>
          <arguments>
            <argument>--add-opens=milktea.cim.base/milktea.cim.framework.command.CommandBus=ALL-UNNAMED</argument>
            <argument>--add-opens=milktea.cim.base/milktea.cim.framework.command.CommandDescriptor=ALL-UNNAMED</argument>
          </arguments>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>jcenter</id>
      <name>jcenter-bintray</name>
      <url>http://jcenter.bintray.com</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>fastjson</artifactId>
      <version>1.2.56</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.26</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.3</version>
    </dependency>
    <dependency>
      <groupId>milktea.cim.framework</groupId>
      <artifactId>cim-base</artifactId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.11.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit.platform.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.25.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.mewna.catnip</groupId>
      <artifactId>catnip</artifactId>
      <version>1.2.0</version>
    </dependency>
  </dependencies>
  <modules>
    <module>cim-bot-core</module>
    <module>cim-bot-essentials</module>
  </modules>
</project>
